--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@
         <a href="Charter.html" id="navPortfolio">Portfolio</a>
         <a href="skills.html">Skills</a>
         <a href="projects.html">Projects</a>
+        <a href="moviesshows.html">Movies & Shows</a>
+        <a href="videogames.html">Video Games</a>
         <a id="hireLink" href="contact.html">Hire Me</a>
       </div>
     </nav>
@@ -539,7 +541,8 @@
       window.scrollTo({ top: 0, behavior: 'auto' });
     }
     
-    navHome.addEventListener('click', openProfilesFromNav);
+    navHome.
+      addEventListener('click', openProfilesFromNav);
     footerHome.addEventListener('click', openProfilesFromNav);
 
     function makeIntroClickable(){
