--- a/moviesshows.html
+++ b/moviesshows.html
@@ -15,9 +15,11 @@
       --muted:#bfbfbf;
       --muted-2:#9a9a9a;
       --accent:#E50914;
+      --ring:rgba(255,255,255,.14);
     }
 
     *{margin:0;padding:0;box-sizing:border-box}
+    html,body{height:100%}
 
     body{
       font-family:-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,sans-serif;
@@ -26,40 +28,36 @@
                  radial-gradient(900px 500px at 110% -20%, #1b1b1b 0%, transparent 55%),
                  linear-gradient(135deg, var(--bg-1), var(--bg-0));
       min-height:100vh;
-      padding:20px;
       overflow-x:hidden;
     }
 
-    .container{max-width:1200px;margin:0 auto}
+    .nf{
+      font-family:"Netflix Sans","Bebas Neue",system-ui,-apple-system,"Segoe UI","Helvetica Neue",Arial,sans-serif;
+      letter-spacing:.015em; text-transform:uppercase;
+    }
 
-    /* Navigation tabs */
-    .tabs{
-      display:flex;
-      gap:8px;
-      margin-bottom:28px;
-      flex-wrap:wrap;
+    /* Navigation bar */
+    .navbar{
+      position:sticky; top:0; inset-inline:0;
+      width:100%; padding:14px clamp(16px,4vw,48px);
+      display:flex; align-items:center; gap:32px; z-index:1000;
+      background:linear-gradient(180deg,rgba(0,0,0,.78),rgba(0,0,0,.45));
+      backdrop-filter:saturate(120%) blur(4px);
+      border-bottom:1px solid rgba(255,255,255,.06);
     }
-    .tab{
-      padding:10px 20px;
-      background:rgba(255,255,255,.08);
-      border:1px solid rgba(255,255,255,.12);
-      border-radius:8px;
-      color:#fff;
+    .brand{
+      background:none;border:0;padding:0;margin:0;cursor:pointer;flex-shrink:0;
+      font-weight:900; color:var(--accent); letter-spacing:-.04em; font-size:clamp(22px,3.2vw,32px);
       text-decoration:none;
-      font-weight:600;
-      font-size:14px;
-      transition:all .2s ease;
     }
-    .tab:hover{
-      background:rgba(255,255,255,.15);
-      border-color:rgba(255,255,255,.25);
-      transform:translateY(-2px);
+    .navlinks{display:flex; gap:22px; align-items:center; flex-wrap:wrap; flex:1;}
+    .navlinks a{
+      color:#e5e5e5; text-decoration:none; font-size:14px; font-weight:600;
     }
-    .tab.active{
-      background:linear-gradient(135deg,var(--accent),#ff6270);
-      border-color:transparent;
-      color:#fff;
-    }
+    .navlinks a:hover{ color:#bfbfbf; }
+    .navlinks a[aria-current="page"]{ color:#fff; text-decoration:underline; text-underline-offset:6px; }
+
+    .container{max-width:1200px;margin:0 auto;padding:20px}
 
     /* Header */
     .header{padding:34px 8px 10px;text-align:center;position:relative}
@@ -162,27 +160,24 @@
       .back-btn{position:static;margin-bottom:14px;display:inline-block}
       .grid{gap:18px;grid-template-columns:repeat(auto-fit,minmax(180px,1fr))}
       .title{font-size:16px}
-      .tabs{gap:6px}
-      .tab{padding:8px 16px;font-size:13px}
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <!-- Navigation Tabs -->
-    <nav class="tabs">
-      <a href="index.html" class="tab">Home</a>
-      <a href="Charter.html" class="tab">Portfolio</a>
-      <a href="skills.html" class="tab">Skills</a>
-      <a href="projects.html" class="tab">Projects</a>
-      <a href="experience.html" class="tab">Experience</a>
-      <a href="certifications.html" class="tab">Certifications</a>
-      <a href="moviesshows.html" class="tab active">Movies & Shows</a>
-      <a href="videogames.html" class="tab">Video Games</a>
-      <a href="blog.html" class="tab">Blogs</a>
-      <a href="contact.html" class="tab">Contact</a>
-    </nav>
+  <!-- Navigation bar -->
+  <nav class="navbar">
+    <a class="brand nf" href="index.html#home" aria-label="Go to Home">Angel Contreras</a>
+    <div class="navlinks" role="navigation" aria-label="Primary">
+      <a href="index.html#home">Home</a>
+      <a href="index.html#portfolio">Portfolio</a>
+      <a href="skills.html">Skills</a>
+      <a href="projects.html">Projects</a>
+      <a href="moviesshows.html" aria-current="page">Movies & Shows</a>
+      <a id="hireLink" href="contact.html">Hire Me</a>
+    </div>
+  </nav>
 
+  <div class="container">
     <header class="header">
       <a href="index.html" class="back-btn">← Back to Portfolio</a>
       <h1>Movies &amp; Shows</h1>
