--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
         <a href="Charter.html" id="navPortfolio">Portfolio</a>
         <a href="skills.html">Skills</a>
         <a href="projects.html">Projects</a>
-        <a href="moviesshows.html">Movies & Shows</a>
-        <a href="videogames.html">Video Games</a>
+        <!-- Removed Movies & Shows tab -->
+        <!-- Removed Video Games tab -->
         <a id="hireLink" href="contact.html">Hire Me</a>
       </div>
     </nav>
