--- a/skills.html
+++ b/skills.html
@@ -128,7 +128,6 @@
       <a href="projects.html">Projects</a>
       <a id="hireLink" href="contact.html">Hire Me</a>
     </div>
-    <!-- Top-right element removed -->
   </nav>
 
   <header class="page-hero">
@@ -212,7 +211,7 @@
     <div class="underline"></div>
     <div class="grid">
       <div class="tile"><div class="ic">VS</div><div><h3>VS Code / Eclipse</h3><p>Development environments for coding efficiency.</p></div></div>
-      <div class="tile"><div class="ic">GH</div><div><h3>Git & GitHub</h3><p>Version control and collaborative development.</p></div></div>
+      <div class="tile"><div class="ic">GH</div><div><h3>GitHub</h3><p>Version control and collaborative development.</p></div></div>
       <div class="tile"><div class="ic">MS</div><div><h3>Microsoft Office 365</h3><p>Documentation, spreadsheets, and presentations.</p></div></div>
     </div>
   </section>
