--- a/videogames.html
+++ b/videogames.html
@@ -161,7 +161,7 @@
     <section class="grid">
 
       <article class="card">
-        <img class="cover" alt="Kingdom Hearts" src="https://images.unsplash.com/photo-1578632292335-df3abbb0d586?q=80&w=1200&auto=format&fit=crop"/>
+        <img class="cover" alt="Kingdom Hearts" src="https://m.media-amazon.com/images/M/MV5BZDk0NjdmM2UtZjg5OS00Nzc4LTgyN2UtYzRlNzAxZjY4ZTdmXkEyXkFqcGdeQXVyMTA0MTM5NjI2._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Kingdom Hearts Franchise</div>
           <div class="by">Square Enix</div>
@@ -170,7 +170,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Jak and Daxter" src="https://images.unsplash.com/photo-1552820728-8b83bb6b773f?q=80&w=1200&auto=format&fit=crop"/>
+        <img class="cover" alt="Jak and Daxter" src="https://m.media-amazon.com/images/M/MV5BMjBhNjA0MjUtZDRmNi00MDY1LThmODktZGFhYWFlYzk4NTQwXkEyXkFqcGdeQXVyMTA0MTM5NjI2._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Jak and Daxter Franchise</div>
           <div class="by">Naughty Dog</div>
@@ -179,7 +179,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Hogwarts Legacy" src="https://images.unsplash.com/photo-1551269901-5c5e14c25df7?q=80&w=1200&auto=format&fit=crop"/>
+        <img class="cover" alt="Hogwarts Legacy" src="https://m.media-amazon.com/images/M/MV5BZmYxNDQ0NzUtZGE5Zi00NWNiLTk4MzEtYjRlNTc1ZTdmYmI0XkEyXkFqcGdeQXVyMTY0Njc2MTUx._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Hogwarts Legacy</div>
           <div class="by">Avalanche Software</div>
@@ -188,7 +188,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Sonic Crossworlds" src="https://images.unsplash.com/photo-1606144042614-b2417e99c4e3?q=80&w=1200&auto=format&fit=crop"/>
+        <img class="cover" alt="Sonic Crossworlds" src="https://m.media-amazon.com/images/M/MV5BNzU5YTQ4NzctMzA4Ni00NzZkLWFkMzEtNDhhMjI0MTYyOWRjXkEyXkFqcGdeQXVyMTEzMjQ4NzEw._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Sonic Crossworlds</div>
           <div class="by">SEGA</div>
@@ -197,7 +197,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Resident Evil 7" src="https://images.unsplash.com/photo-1509198397868-475647b2a1e5?q=80&w=1200&auto=format&fit=crop"/>
+        <img class="cover" alt="Resident Evil 7" src="https://m.media-amazon.com/images/M/MV5BYmI4ZGNjYjYtMmI2Yy00MTMwLWFkNDQtZjg3YmRkZjA0ZmU0XkEyXkFqcGdeQXVyMTEzMjQ4NzEw._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Resident Evil 7</div>
           <div class="by">Capcom</div>
@@ -206,7 +206,7 @@
       </article>
 
       <article class="card">
-        <img class="cover" alt="Little Nightmares 3" src="https://images.unsplash.com/photo-1614613535308-eb5fbd3d2c17?q=80&w=1200&auto=format&fit=crop"/>
+        <img class="cover" alt="Little Nightmares 3" src="https://m.media-amazon.com/images/M/MV5BMzU1MTk0NjAtYTgzMy00ZjY0LThjZWUtNmRlZDllY2FlNmY0XkEyXkFqcGdeQXVyMTEwMTQ4MzU1._V1_FMjpg_UX1000_.jpg"/>
         <div class="panel">
           <div class="game-title">Little Nightmares 3</div>
           <div class="by">Supermassive Games</div>
