--- a/moviesshows.html
+++ b/moviesshows.html
@@ -225,7 +225,7 @@
 
         <!-- One Punch Man -->
         <article class="card" data-genre="anime action comedy">
-          <img class="cover" alt="One Punch Man" src="https://m.media-amazon.com/images/M/MV5BZjJlNzE5YzEtYzQwYS00NTBjLTk5YzEtYWNhYmJiNTY5YmMwXkEyXkFqcGdeQXVyNTgyNTA4MjM@._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="One Punch Man" src="https://m.media-amazon.com/images/M/MV5BNTkzNWZkMzEtNjEyOS00MGI3LWJmMWItOTdhNmVjMmMyMjQ2XkEyXkFqcGdeQXVyNTgyNTA4MjM@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">One Punch Man</div>
@@ -235,7 +235,7 @@
 
         <!-- IT: Welcome to Derry -->
         <article class="card" data-genre="horror">
-          <img class="cover" alt="IT: Welcome to Derry" src="https://m.media-amazon.com/images/M/MV5BZmE3ZmE5YWItNzJkMy00ZGQzLWI3YjUtNzk5Yzk4NjMzNzY4XkEyXkFqcGdeQXVyMTUzMTg2ODkz._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="IT: Welcome to Derry" src="https://m.media-amazon.com/images/M/MV5BN2YyMDdjODAtNWVmYS00YjljLTk4NDUtNzNlYWI0YzRjYTg5XkEyXkFqcGdeQXVyMTUzMTg2ODkz._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">IT: Welcome to Derry</div>
@@ -245,7 +245,7 @@
 
         <!-- Chainsaw Man -->
         <article class="card" data-genre="anime action horror">
-          <img class="cover" alt="Chainsaw Man" src="https://m.media-amazon.com/images/M/MV5BNDEzMjM4ODItNGQxYi00YWUwLWI0OTQtZTQxZjRlZTJkNWRkXkEyXkFqcGdeQXVyMTU1OTc1Njk@._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="Chainsaw Man" src="https://m.media-amazon.com/images/M/MV5BYTc0NWFhNWItYWMzNy00ZjMwLWI3ODAtYTIxMjEzMWI3N2ZiXkEyXkFqcGdeQXVyMTU1OTc1Njk@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Chainsaw Man</div>
@@ -255,7 +255,7 @@
 
         <!-- Bugonia -->
         <article class="card" data-genre="drama scifi">
-          <img class="cover" alt="Bugonia" src="https://m.media-amazon.com/images/M/MV5BZjA0MTI4ZDUtODU3Ni00OGI5LWFiY2ItNTY2ODYxZDZjMTg3XkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="Bugonia" src="https://m.media-amazon.com/images/M/MV5BM2RjODYzNzYtMzg1MC00YjdkLWFiMGUtMzU0NTRlMjc3NmMyXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Bugonia</div>
@@ -265,7 +265,7 @@
 
         <!-- Eight Legged Freaks -->
         <article class="card" data-genre="horror comedy action">
-          <img class="cover" alt="Eight Legged Freaks" src="https://m.media-amazon.com/images/M/MV5BMjI0ODc1NjMyMl5BMl5BanBnXkFtZTYwMzUyOTY3._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="Eight Legged Freaks" src="https://m.media-amazon.com/images/M/MV5BODMzMDU5YTMtNDJkMS00NDI4LWEyNGItZWQzYTI5OTU3MDU1XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Eight Legged Freaks</div>
@@ -275,7 +275,7 @@
 
         <!-- Grandma's Boy -->
         <article class="card" data-genre="comedy">
-          <img class="cover" alt="Grandma's Boy" src="https://m.media-amazon.com/images/M/MV5BMTEyMzUxODI2MzNeQTJeQWpwZ15BbWU3MDEwMTgwNDM@._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="Grandma's Boy" src="https://m.media-amazon.com/images/M/MV5BZjA4MTAzMzctMjU3Yi00OGE1LTk0ZDctNDJkMTk2MDgyMTc2XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Grandma's Boy</div>
