--- a/moviesshows.html
+++ b/moviesshows.html
@@ -225,7 +225,7 @@
 
         <!-- One Punch Man -->
         <article class="card" data-genre="anime action comedy">
-          <img class="cover" alt="One Punch Man" src="https://m.media-amazon.com/images/M/MV5BNTkzNWZkMzEtNjEyOS00MGI3LWJmMWItOTdhNmVjMmMyMjQ2XkEyXkFqcGdeQXVyNTgyNTA4MjM@._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="One Punch Man" src="https://m.media-amazon.com/images/M/MV5BZjJlNzE5YzEtYzQwYS00NTBjLTk5YzAtYzUwOWQyM2E3OGI2XkEyXkFqcGdeQXVyNTgyNTA4MjM@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">One Punch Man</div>
@@ -235,7 +235,7 @@
 
         <!-- IT: Welcome to Derry -->
         <article class="card" data-genre="horror">
-          <img class="cover" alt="IT: Welcome to Derry" src="https://m.media-amazon.com/images/M/MV5BN2YyMDdjODAtNWVmYS00YjljLTk4NDUtNzNlYWI0YzRjYTg5XkEyXkFqcGdeQXVyMTUzMTg2ODkz._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="IT: Welcome to Derry" src="https://m.media-amazon.com/images/M/MV5BMTY5NjYwNDgtNGVlYS00YjA3LWIwNGMtODczMTA0NzY2NzJhXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">IT: Welcome to Derry</div>
@@ -245,7 +245,7 @@
 
         <!-- Chainsaw Man -->
         <article class="card" data-genre="anime action horror">
-          <img class="cover" alt="Chainsaw Man" src="https://m.media-amazon.com/images/M/MV5BYTc0NWFhNWItYWMzNy00ZjMwLWI3ODAtYTIxMjEzMWI3N2ZiXkEyXkFqcGdeQXVyMTU1OTc1Njk@._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="Chainsaw Man" src="https://m.media-amazon.com/images/M/MV5BZjEwZTEwZWQtYjk4Mi00YTE0LTk0MDktMzgzZWIzMWM0NDJmXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Chainsaw Man</div>
@@ -255,17 +255,17 @@
 
         <!-- Bugonia -->
         <article class="card" data-genre="drama scifi">
-          <img class="cover" alt="Bugonia" src="https://m.media-amazon.com/images/M/MV5BM2RjODYzNzYtMzg1MC00YjdkLWFiMGUtMzU0NTRlMjc3NmMyXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="Bugonia" src="https://m.media-amazon.com/images/M/MV5BOTg5ZWE2NjktYTdlZi00ZTU4LThkODQtMjQ0ZjA4YzZhNGE4XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Bugonia</div>
-            <div class="by">Upcoming Film</div>
+            <div class="by">by Focus Features</div>
           </div>
         </article>
 
         <!-- Eight Legged Freaks -->
         <article class="card" data-genre="horror comedy action">
-          <img class="cover" alt="Eight Legged Freaks" src="https://m.media-amazon.com/images/M/MV5BODMzMDU5YTMtNDJkMS00NDI4LWEyNGItZWQzYTI5OTU3MDU1XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="Eight Legged Freaks" src="https://m.media-amazon.com/images/M/MV5BYjRhNjFhYzctYzViMi00NzljLThjMjQtNWIzY2I5YjFkOGVhXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Eight Legged Freaks</div>
@@ -275,7 +275,7 @@
 
         <!-- Grandma's Boy -->
         <article class="card" data-genre="comedy">
-          <img class="cover" alt="Grandma's Boy" src="https://m.media-amazon.com/images/M/MV5BZjA4MTAzMzctMjU3Yi00OGE1LTk0ZDctNDJkMTk2MDgyMTc2XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg"/>
+          <img class="cover" alt="Grandma's Boy" src="https://m.media-amazon.com/images/M/MV5BMTI0NjYzOTY0Ml5BMl5BanBnXkFtZTcwODc0MTUzMQ@@._V1_FMjpg_UX1000_.jpg"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Grandma's Boy</div>
